# slambook

./: .gitignore  README.md
doc/: note.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ch1/lib/ch1/: wang2_node
install/ch1/share/ch1/: package.bash  package.dsv  package.sh
log/: latest_build
src/ch1/: CMakeLists.txt  package.xml
src/ch12/: CMakeLists.txt  package.xml
src/ch12/src/: dense_mapping.cpp
src/ch2/: CMakeLists.txt  package.xml
src/ch2/src/: helloSLAM.cpp
src/ch3/: CMakeLists.txt  package.xml
src/ch3/rviz/: plotTrajectory.rviz  plotTrajectory_arrow.rviz
src/ch3/src/: coordinateTransform.cpp  eigenMatrix.cpp  plotTrajectory.cpp  plotTrajectory_arrow.cpp  useGeometry.cpp
src/ch4/: CMakeLists.txt  package.xml
src/ch4/rviz/: trajectoryError.rviz
src/ch4/src/: trajectoryError.cpp  useSophus.cpp
src/ch5/: CMakeLists.txt  package.xml
src/ch5/rviz/: jointMap.rviz  stereoVision.rviz
src/ch5/src/: imageBasics.cpp  jointMap.cpp  stereoVision.cpp  undistortImage.cpp
src/ch6/: CMakeLists.txt  package.xml
src/ch6/src/: ceresCurveFitting.cpp  demo.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
src/ch7/: CMakeLists.txt  package.xml
src/ch7/src/: orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
src/ch8/: CMakeLists.txt  package.xml
src/ch8/src/: direct_method.cpp  optical_flow.cpp
src/ch9/: CMakeLists.txt  package.xml
src/ch9/output/: final.ply
src/ch9/src/: SnavelyReprojectionError.h  bundle_adjustment_g2o.cpp  common.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/ch1/share/ch1/: local_setup.dsv  package.ps1  package.sh  package.zsh
src/install/ch2/lib/ch2/: helloSLAM
src/install/ch2/share/ch2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
